# otool_esp_hosted_fw_update

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.json  library.properties
cmake/: otool_esp_hosted_fw_gen.cpp.in
examples/arduino_minimal/: README.md
examples/espidf_minimal/: README.md
firmware/esp32c6_wifi_firmware/: README.md
include/: otool_esp_hosted_fw_console.h  otool_esp_hosted_fw_update.h  otool_esp_hosted_fw_update_config.h  otool_esp_hosted_fw_update_types.h  otool_esp_hosted_wifi_firmware_ota.h
src/compat/: otool_esp_hosted_wifi_firmware_ota_compat.cpp
src/console/: otool_esp_hosted_fw_console.cpp
src/core/: otool_esp_hosted_fw_update_core.cpp  otool_esp_hosted_fw_update_registry.cpp  otool_esp_hosted_fw_update_registry.h
src/ports/arduino/: otool_esp_hosted_fw_platform_arduino_stub.cpp
src/ports/espidf/: otool_esp_hosted_fw_platform_espidf.cpp  otool_esp_hosted_fw_transport_esp_hosted.cpp  otool_esp_hosted_fw_update_minimal_init.cpp
src/providers/: otool_esp_hosted_fw_provider_embedded.cpp  otool_esp_hosted_fw_provider_stub.cpp
tests/host_stub/: README.md
